--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -18,8 +18,8 @@
     {{ content }}
   </main>
 
-  <footer>
-    <p>&copy; {{ site.time | date: "%Y" }} {{ site.title }}</p>
+  <footer class="site-footer">
+    <p>© 2026 Henry Marsom. All rights reserved.</p>
   </footer>
 </body>
 </html>
