--- a/assets/style.css
+++ b/assets/style.css
@@ -82,3 +82,15 @@ body {
   color: #777;
   border-top: 1px solid #e0e0e0;
 }
+html, body {
+  height: 100%;
+}
+
+body {
+  display: flex;
+  flex-direction: column;
+}
+
+.page-content {
+  flex: 1;
+}
