--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -6,15 +6,11 @@
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
   <title>{{ page.title }} | {{ site.title }}</title>
 </head>
-<<body class="light">
+<body class="light">
 
   <!-- Header / Navigation -->
   <header class="site-header">
     <nav class="nav">
-      <div class="nav-left">
-        <a href="/" class="site-name">Charles Marsom</a>
-      </div>
-
       <div class="nav-center">
         <a href="/">Home</a>
         <a href="/about/">About</a>
