--- a/assets/style.css
+++ b/assets/style.css
@@ -131,6 +131,7 @@ body.dark #theme-toggle:hover {
 
 .contact {
   margin-top: 80px;
+  margin-bottom: 0px;
   display: flex;
   gap: 30px;
   justify-content: center;
