--- a/assets/style.css
+++ b/assets/style.css
@@ -356,6 +356,7 @@ body.dark .site-footer {
 }
 
 .resume-img {
+  margin: 0 auto;
   display: block;
   width: 700px;              /* fixed image width */
   max-width: 100%;           /* scales on mobile */
