--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -33,7 +33,7 @@
 
   <!-- Footer -->
   <footer class="site-footer">
-    <p>© 2026 Charles Marsom. All rights reserved.</p>
+    <p>© 2026 Henry Marsom. All rights reserved.</p>
   </footer>
 
   <!-- Theme Script -->
